Refactor: Complete architecture overhaul from Part-based to 5-engine system
Major Changes:
- Created 5 new engines: DataManager, FeatureEngine, OptimizationEngine, MLEngine, ExperimentRunner
- Implemented per-classifier workflow (each classifier gets baseline → window opt → master dataset → SFS)
- Added modular ExperimentConfig system for swapping components
- Moved legacy Part1-5 code to legacy/ folder for reference
- Updated README.md and .gitignore to reflect new structure

Technical Improvements:
- Eliminated code duplication across Part files
- Centralized ML operations in MyWekaUtils (unchanged core logic)
- Per-classifier optimization instead of global single values
- Fixed compilation errors and verified code runs successfully
- Maintained backward compatibility with WadaManager commands

New Architecture:
DataManager: Raw data processing (from Part1)
FeatureEngine: Feature extraction (consolidated from Part1-3)
OptimizationEngine: Window optimization + SFS (from Part2, Part4)
MLEngine: ML evaluation + experiment orchestration (from Part5)
ExperimentRunner: New unified command interface

Status:
✅ Compiles successfully (13 .class files)
✅ Code runs - help menu verified
✅ Documentation updated
✅ ML core code unchanged (verified identical to Part files)